# android-remote-agent

./: .gitignore  AGENTS.md  LICENSE  README.md
server/: alembic.ini  pyproject.toml
server/migrations/: env.py  script.py.mako
server/migrations/sql/: 20260714_0001_initial_down.sql  20260714_0001_initial_up.sql
server/migrations/versions/: 20260714_0001_initial_schema.py  20260716_0002_health_alerts.py  20260717_0003_timelapse_video_jobs.py  20260718_0004_camera_commands.py
server/src/timelapse/: __init__.py  configuration.py  database.py  logging.py
server/tests/integration/: conftest.py  test_camera_commands.py  test_command_edge_cases.py  test_disk_pressure.py  test_export_commands.py  test_export_snapshot.py  test_export_worker.py  test_health_worker.py  test_heartbeat.py  test_heartbeat_aggregation.py  test_image_upload.py  test_migration_chain.py  test_motion_worker.py  test_reconciliation.py  test_retention.py  test_telegram_commands.py  test_timelapse_video_requests.py  test_timelapse_video_worker.py  test_voice_note_commands.py
server/tests/unit/: test_camera_credentials.py  test_documentation_links.py  test_export_date_parser.py  test_export_zip.py  test_health.py  test_heartbeat_aggregation.py  test_image_files.py  test_liveness.py  test_motion_detection.py  test_schema_metadata.py  test_storage_pressure.py  test_telegram_application.py  test_telegram_authorization.py  test_telegram_client.py  test_telegram_messages.py  test_telegram_webhook.py  test_timelapse_video_generator.py  test_timelapse_worker_application.py  test_voice_note_audio.py  (+1 more)
(+95 files in other folders)
