[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "timelapse-camera-server"
version = "0.1.0"
description = "VPS server for an Android time-lapse security camera"
requires-python = ">=3.11,<3.13"

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "python-telegram-bot==22.8",
    "opencv-python-headless>=4.10,<5",
    "pillow>=11,<13",
    "python-multipart>=0.0.20,<1",
    "pydantic-settings>=2.7,<3",
    "tzdata>=2025.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "httpx>=0.28,<1",
    "ruff==0.15.21",
]

[project.scripts]
timelapse-credentials = "timelapse.cli.credentials:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--strict-markers", "--strict-config", "-ra"]

[tool.ruff]
target-version = "py311"
line-length = 95
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "ASYNC", "S"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
